[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.9"
rust_condition = {path = "../rust_condition"}
c2rust-bitfields = "0.3.0"

[build-dependencies]
rust_condition = {path = "../rust_condition"}

[lib]
crate-type = ["rlib"]
name = "rust_ffi"