[package]
name = "rust_project"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.9"
rust_ffi = {path = "../rust_ffi"}
rust_condition = {path = "../rust_condition"}

[build-dependencies]
rust_ffi = {path = "../rust_ffi"}
rust_condition = {path = "../rust_condition"}

[lib]
crate-type = ["staticlib"]
name = "rust_project"